--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,4 @@
 {
-  "presets": ["react", "es2015-native-modules", "stage-2"]
+  "presets": ["react", "es2015-native-modules", "stage-2"],
+  "plugins": ["react-hot-loader/babel"]
 }
