--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "object.assign": "^4.0.4",
     "react": "^15.4.0-rc.4",
     "react-dom": "^15.4.0-rc.4",
-    "react-hot-loader": "^3.0.0-beta.6",
     "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
+    "react-hot-loader": "^3.0.0-beta.6",
     "babel-core": "^6.17.0",
+    "compression-webpack-plugin": "^0.3.2",
+    "extract-text-webpack-plugin": "^1.0.1",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-es2015-native-modules": "^6.9.4",
