--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
     "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
-    "react-hot-loader": "^3.0.0-beta.6",
+    "extract-text-webpack-plugin": "^2.0.0-beta",
+    "file-loader": "^0.9.0",
     "babel-core": "^6.17.0",
-    "compression-webpack-plugin": "^0.3.2",
-    "extract-text-webpack-plugin": "^1.0.1",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-es2015-native-modules": "^6.9.4",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-2": "^6.17.0",
+    "compression-webpack-plugin": "^0.3.2",
     "css-loader": "^0.25.0",
     "node-sass": "^3.10.1",
+    "react-hot-loader": "^3.0.0-beta.6",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "webpack": "~2.1.0-beta.25",
